deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  ingress:
  - {}
  policyTypes:
  - Ingress
  - Egress
